# Swink-Agent-Examples

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md
.github/: CODEOWNERS  contributors.json  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  new_example.yml
.github/workflows/: approve-contributor.yml  ci.yml  pr-gate.yml
.playwright-mcp/: page-2026-04-16T16-35-18-059Z.yml  page-2026-04-16T16-35-25-227Z.yml
by_model/anthropic/haiku/basic/: Cargo.toml  README.md
by_model/anthropic/haiku/basic/src/: main.rs
by_model/anthropic/haiku/minimal/: Cargo.toml  README.md
by_model/anthropic/haiku/minimal/src/: main.rs
by_model/bedrock/claude/basic/: AGENTS.md  Cargo.toml  README.md
by_model/bedrock/claude/basic/src/: main.rs
by_model/google/gemini/basic/: AGENTS.md  Cargo.toml  README.md
by_model/google/gemini/basic/src/: main.rs
by_model/local/gemma4-e2b/basic/: Cargo.toml  README.md
by_model/local/gemma4-e2b/basic/src/: main.rs
by_model/local/gemma4-e4b/basic/: Cargo.toml  README.md
by_model/local/gemma4-e4b/basic/src/: main.rs
by_model/local/smollm3/basic/: Cargo.toml  README.md
by_model/local/smollm3/basic/src/: main.rs
by_model/mistral/mistral-large/basic/: Cargo.toml  README.md
by_model/mistral/mistral-large/basic/src/: main.rs
by_model/ollama/gemma4/basic/: Cargo.toml  README.md
by_model/ollama/gemma4/basic/src/: main.rs
by_model/ollama/llama3/basic/: Cargo.toml  README.md
by_model/ollama/llama3/basic/src/: main.rs
by_model/openai/gpt-4o/basic/: Cargo.toml  README.md
by_model/openai/gpt-4o/basic/src/: main.rs
by_model/openai/gpt-5/basic/: Cargo.toml  README.md
by_model/openai/gpt-5/basic/src/: main.rs
by_model/openai_compat/multi/basic/: AGENTS.md  Cargo.toml  README.md
by_model/openai_compat/multi/basic/src/: main.rs
by_pattern/context_versioning/branching/: Cargo.toml
by_pattern/context_versioning/branching/src/: main.rs
by_pattern/custom_adapter/basic/: Cargo.toml  README.md
by_pattern/custom_adapter/basic/src/: main.rs
by_pattern/hot_reload/scripting_agent/: Cargo.toml
by_pattern/hot_reload/scripting_agent/src/: main.rs
by_pattern/hot_reload/scripting_agent/tools/: greet.toml  wordcount.toml
by_pattern/mcp/context7_docs/: Cargo.toml
by_pattern/mcp/context7_docs/src/: main.rs
by_pattern/mock_provider/basic/: Cargo.toml  README.md
by_pattern/mock_provider/basic/src/: main.rs
by_pattern/model_fallback/basic/: Cargo.toml
by_pattern/model_fallback/basic/src/: main.rs
by_pattern/observability/otel_stack/: Cargo.toml
by_pattern/observability/otel_stack/src/: main.rs
by_pattern/orchestrator/supervisor/: AGENTS.md  Cargo.toml  README.md
by_pattern/orchestrator/supervisor/src/: main.rs
by_pattern/parallel_tools/fan_out_fetch/: AGENTS.md  Cargo.toml  README.md
by_pattern/parallel_tools/fan_out_fetch/src/: main.rs
by_pattern/persistent_chat/basic/: Cargo.toml
by_pattern/persistent_chat/basic/src/: main.rs
by_pattern/pipeline/research_pipeline/: AGENTS.md  Cargo.toml  README.md
by_pattern/pipeline/research_pipeline/src/: main.rs
by_pattern/production_guardrails/basic/: Cargo.toml
by_pattern/production_guardrails/basic/src/: main.rs
by_pattern/prompt_caching/long_context/: Cargo.toml
by_pattern/prompt_caching/long_context/src/: main.rs
by_pattern/swarm/basic/: Cargo.toml  README.md
by_pattern/swarm/basic/src/: main.rs
by_pattern/tool_use/basic/: Cargo.toml  README.md
by_pattern/tool_use/basic/src/: main.rs
by_pattern/tui/basic/: Cargo.toml  README.md
by_pattern/tui/basic/src/: main.rs
by_pattern/tui/yolo/: Cargo.toml  README.md  plan.md
by_pattern/tui/yolo/src/: main.rs
usecases/eval_harness/basic/: Cargo.toml
usecases/eval_harness/basic/src/: main.rs
usecases/research/basic/: Cargo.toml  README.md
usecases/research/basic/src/: main.rs
usecases/research/deep_research/: Cargo.toml  README.md  TODO.md
usecases/research/deep_research/src/: main.rs
usecases/summarization/basic/: Cargo.toml  README.md
usecases/summarization/basic/src/: main.rs
