[package]
name = "mcp-context7-docs"
version = "0.1.0"
edition = "2024"
rust-version = "1.88"
publish = false

[dependencies]
swink-agent = "0.9"
swink-agent-adapters = { version = "0.9", features = ["anthropic"] }
swink-agent-mcp = "0.9"
swink-agent-policies = { version = "0.9", features = ["deny-list", "audit"] }
tokio = { version = "1", features = ["full"] }
dotenvy = "0.15"
