[package]
name = "model-fallback-basic"
version = "0.1.0"
edition = "2024"
rust-version = "1.88"
publish = false

[dependencies]
swink-agent = "0.8"
swink-agent-adapters = { version = "0.8", features = ["anthropic", "openai"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
tokio = { version = "1", features = ["full"] }
dotenvy = "0.15"
