[package]
name = "observability-otel-stack"
version = "0.1.0"
edition = "2024"
rust-version = "1.88"
publish = false

[dependencies]
swink-agent = { version = "0.7", features = ["otel", "tiktoken"] }
swink-agent-adapters = { version = "0.7", features = ["anthropic"] }
tracing-subscriber = { version = "0.3", features = ["registry", "env-filter"] }
tiktoken-rs = "0.6"
tokio = { version = "1", features = ["full"] }
dotenvy = "0.15"
