[package]
name = "parallel-tools-fan-out-fetch"
version = "0.1.0"
edition = "2024"
rust-version = "1.88"
publish = false

[dependencies]
swink-agent = "0.7"
swink-agent-adapters = { version = "0.7", features = ["anthropic"] }
tokio = { version = "1", features = ["full"] }
dotenvy = "0.15"
schemars = "1"
serde = { version = "1", features = ["derive"] }
