[package]
name = "production-guardrails-basic"
version = "0.1.0"
edition = "2024"
rust-version = "1.88"
publish = false

[dependencies]
swink-agent = "0.8"
swink-agent-adapters = { version = "0.8", features = ["anthropic"] }
swink-agent-policies = { version = "0.8", features = ["budget", "max-turns", "prompt-guard", "pii", "content-filter", "loop-detection", "audit"] }
tokio = { version = "1", features = ["full"] }
dotenvy = "0.15"
serde_json = "1"
