[package]
name = "tool-use-basic"
version = "0.1.0"
edition = "2024"
rust-version = "1.88"
publish = false

[dependencies]
swink-agent = "0.8"
swink-agent-adapters = { version = "0.8", features = ["anthropic"] }
tokio = { version = "1", features = ["full"] }
dotenvy = "0.15"
serde = { version = "1", features = ["derive"] }
schemars = "1"
