[package]
name = "tui-yolo"
version = "0.1.0"
edition = "2024"
rust-version = "1.88"
publish = false

[dependencies]
swink-agent = "0.7.7"
swink-agent-adapters = { version = "0.7.7", features = ["anthropic"] }
swink-agent-tui = { version = "0.7.7", features = ["cli"] }
tokio = { version = "1", features = ["full"] }
dotenvy = "0.15"
