[package]
name = "research-basic"
version = "0.1.0"
edition = "2024"
rust-version = "1.88"
publish = false

[dependencies]
swink-agent = { version = "0.9", features = ["plugins"] }
swink-agent-adapters = { version = "0.9", features = ["anthropic"] }
swink-agent-plugin-web = "0.9"
tokio = { version = "1", features = ["full"] }
dotenvy = "0.15"
