[package]
name = "research-deep-research"
version = "0.1.0"
edition = "2024"
rust-version = "1.88"
publish = false

[dependencies]
swink-agent = { version = "0", features = ["artifact-tools"] }
swink-agent-adapters = { version = "0", features = ["anthropic"] }
swink-agent-tui = { version = "0" }
tokio = { version = "1", features = ["full"] }
dotenvy = "0.15"
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
schemars = "1"
