[package]
name = "local-smollm3-basic"
version = "0.1.0"
edition = "2024"
rust-version = "1.88"
publish = false

[features]
metal = ["swink-agent-local-llm/metal"]
cuda = ["swink-agent-local-llm/cuda"]

[dependencies]
swink-agent = "0.9"
swink-agent-local-llm = "0.9"
tokio = { version = "1", features = ["full"] }
